kube/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - http:
      paths:
      
      - path: /access
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-service
            port:
              number: 80
